# AlloyLib

./: Anchor.toml
programs/alloy-lib/: Cargo.toml
programs/alloy-lib/src/: lib.rs
tests/: alloy-lib.ts
